# rs-shortcut

./: Cargo.toml  config-gbk.toml.template  config-utf8.toml.template  config.toml  config.toml.template
src/: main.rs  snippet.rs
src/models/: snippet.rs
src/util/: execution.rs  mod.rs
