[package]
name = "rs_shortcut"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = "1.0"
serde_derive = "1.0.133"
inquire = "0.2.1"
ssh2 = "0.9"
tinytemplate = "1.1"
encoding = "0.2"