[package]
name = "rs_shortcut"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
serde = "1.0"
serde_derive = "1.0.133"
inquire = "0.7.5"
ssh2 = "0.9"
tinytemplate = "1.1"
encoding = "0.2"
regex = "1.5"
dirs = "6.0.0"